[package]
name = "mnml-db-mariadb"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "MariaDB / MySQL viewer for mnml — terminal TUI with multiple saved connections and a query playground."
homepage = "https://mnml.sh"
repository = "https://github.com/chris-mclennan/mnml-db-mariadb"
readme = "README.md"

[[bin]]
name = "mnml-db-mariadb"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
# mysql_async is the maintained tokio-native MySQL driver; works
# against MariaDB and MySQL servers indistinguishably.
mysql_async = { version = "0.36", default-features = false, features = ["minimal-rust", "default-rustls", "tracing"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

tmnl-protocol = { path = "../tmnl-protocol" }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
